--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -5,6 +5,27 @@
 
 Here are the instructions for condition {{ treatment_type }}.
 
+    {{ if treatment_type == '2PP' }}
+
+
+    {{ endif }}
+
+    {{ if treatment_type == '3PP' }}
+
+
+    {{ endif }}
+
+    {{ if treatment_type == '3PR' }}
+
+
+    {{ endif }}
+
+    {{ if treatment_type == '3PC' }}
+
+
+    {{ endif }}
+
+
     <div style="display: flex; justify-content: flex-end">
       {% next_button %}
     </div>
