--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -5,6 +5,11 @@
 
 Here are the instructions for condition {{ treatment_type }}.
 
+    {{ if treatment_type == '0DG' }}
+
+
+    {{ endif }}
+
     {{ if treatment_type == '2PP' }}
 
 
@@ -21,6 +26,11 @@ Here are the instructions for condition {{ treatment_type }}.
     {{ endif }}
 
     {{ if treatment_type == '3PC' }}
+
+
+    {{ endif }}
+
+    {{ if treatment_type == '3PP Country' }}
 
 
     {{ endif }}
