instructions, loading in country names, minor tweaks to trial structure

--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -14,35 +14,45 @@
 
 <div>
     <p>
-        We are researchers at the Univeristy of Zürich, Switzerland, studying human decision-making.
+        We are researchers at the University of Zürich, Switzerland, studying human decision-making.
     </p>
     <p>
-        For your participation in this brief study, you will earn {{ participation_fee }} for simply taking part.
-        You will be making one or more decisions which can earn you additional money in the form of a bonus
-        and possibly influence the bonuses of other participants.
+        For your participation in this study, you will receive {{ participation_fee }} for taking part.
+        In addition, can receive bonus points, determined by your decisions and the decisions of other participants in this study.
     </p>
     <p>
         Your participation in this study is completely voluntary.
         You may refuse to participate without penalty or loss of benefit to which you may otherwise be entitled.
     </p>
     <p>
-        By clicking the “I Consent” button, you confirm that you have read the description of this study and that you give my consent to participate.
+        By clicking the “I Consent” button, you confirm that you have read the description of this study and that you give consent to participate.
     </p>
     <p>
         For questions, concerns, or suggestions about this research, please contact: <br>
-        <a href="mailto:coop@evolbio.mpg.de"> coop@evolbio.mpg.de </a>
+        <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a>, <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a> or <a href="mailto:gross@psychologie.uzh.ch"> gross@psychologie.uzh.ch </a>
     </p>
     <p>
-        Dr. Charlotte Rossetti & Dr. Caroline Graf <br>
-        Univeristy of Zürich, Switzerland <br>
+        Dr. Charlotte Rossetti, Dr. Caroline Graf and Dr. Jörg Gross <br>
+        University of Zürich, Switzerland <br>
 <!--        <img/>-->
     </p>
 </div>
 
     <p>
         <div style="display: flex; justify-content: flex-end">
-        {% next_button %}
+        <button style="
+                    color: #fff;
+                    background-color: #b08600;
+                    border: 1px solid transparent;
+                    font-size: 1rem;
+                    border-radius: 0.25rem;">
+
+        I CONSENT
+    </button>
+
         </div>
+
+
     </p>
 
 {% endblock %}
