--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -1,34 +1,32 @@
 {{ block title }}
 
-Introduction
+Welcome to this study on decision-making!
 
 {{ endblock }}
 {{ block content }}
 
 <div>
     <p>
-        Welcome to this study on decision-making!
+        In addition to the Toluna points you will receive for participating, you can receive bonus points.
+        Bonus points are determined by your decisions and the decisions of others who are also participating in the study.
+        At the end of the study, the points you collected will be converted into Toluna points using the following conversion rate:
     </p>
     <p>
-        In addition to the payment you will receive for participating,
-        you can receive bonus points based on your decisions and the decisions of others in the study.
-        At the end, these points will be converted into real money using the following conversion rate:
+        1 point = {{ session.real_world_currency_per_point }} Toluna points
     </p>
     <p>
-        1 point = {{ session.real_world_currency_per_point }}
+        You will make decisions in different situations and in different roles. At the end of the study,
+        one situation and one role will be chosen at random and your bonus points will be determined
+        by your own and others' decisions in this situation. Since you do not know which decision counts
+        for your extra points, you should treat each decision as if it would be the one that counts.
+
     </p>
     <p>
-        Your anonymity is guaranteed during the whole study,
-        to both the other participants and the experimenters.
-        You will make decisions about different scenarios, and in different roles.
-        At the end of the study,
-        one scenario will be chosen at random, and you will be paid the bonus based on the decisions you and others made in that scenario,
-        depending on your role. Since you do not know which scenario counts for your extra points,
-        you should treat each scenario as if it would be the one that counts,
-    </p>
+        Your anonymity is guaranteed during the whole study, to both the other participants and the researchers.
     <p>
-        Please read the instructions carefully,
-        as your compensation from Toluna will be based on the points you receive during the study.
+
+    <p>
+        Please read the instructions carefully, as the points you collect during the study will impact your Toluna points.
     <p>
 </div>
 
